# nerv-mesh

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  mcp.json.example  models.yaml.example  pyproject.toml  settings.json.example
.claude/: settings.local.json
docs/: README.md
docs/20260331/: README.md
docs/20260331/nerv-mesh/: README.md
docs/20260331/nerv-mesh/design/: 000-product-vision.md  010-system-architecture-v0.md  020-memory-sleep-dream-v0.md  025-memory-architecture-v1.md  030-subagents-tools-v0.md  040-roadmap-v0.md  050-model-config-routing-v0.md  060-execution-architecture-v1.md
docs/20260331/nerv-mesh/discussions/: 2026-03-01-doc-review-and-challenges.md  2026-03-01-execution-architecture.md  (+3 more)
docs/20260331/research/: README.md
src/nerv_mesh/: __init__.py  __main__.py  cli.py
src/nerv_mesh/_defaults/: NERV.md  config.yaml  models.yaml  settings.json
src/nerv_mesh/agents/: graph.py  state.py
src/nerv_mesh/channels/: cli.py  feishu.py
src/nerv_mesh/config/: __init__.py  loader.py  models.py  paths.py
src/nerv_mesh/gateway/: app.py  deps.py  feishu_route.py
src/nerv_mesh/llm/: __init__.py  resolver.py
src/nerv_mesh/memory/: __init__.py  profile.py  store.py
src/nerv_mesh/sandbox/: __init__.py  local.py
src/nerv_mesh/skills/: loader.py
src/nerv_mesh/tools/: __init__.py  builtin.py  interaction.py  memory_tools.py  meta.py  registry.py  search.py  web.py
tests/: test_config.py  test_gateway.py  test_llm.py  test_memory.py  test_meta_tools.py  test_sandbox.py  test_skills.py  test_tools.py
(+15 files in other folders)
